Step 2: Fix font flicker - optimized Kalameh localFont config + removed duplicate @font-face rules from globals.css

--- a/design/globals.css
+++ b/design/globals.css
@@ -1,69 +1,5 @@
 @import "tailwindcss";
 
-@font-face {
-  font-family: "KalamehWebFaNum";
-  font-style: normal;
-  font-weight: 100;
-  font-display: swap;
-  src: url("/fonts/KalamehWebFaNum-Thin.woff2") format("woff2");
-}
-@font-face {
-  font-family: "KalamehWebFaNum";
-  font-style: normal;
-  font-weight: 200;
-  font-display: swap;
-  src: url("/fonts/KalamehWebFaNum-ExtraLight.woff2") format("woff2");
-}
-@font-face {
-  font-family: "KalamehWebFaNum";
-  font-style: normal;
-  font-weight: 300;
-  font-display: swap;
-  src: url("/fonts/KalamehWebFaNum-Light.woff2") format("woff2");
-}
-@font-face {
-  font-family: "KalamehWebFaNum";
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: url("/fonts/KalamehWebFaNum-Regular.woff2") format("woff2");
-}
-@font-face {
-  font-family: "KalamehWebFaNum";
-  font-style: normal;
-  font-weight: 500;
-  font-display: swap;
-  src: url("/fonts/KalamehWebFaNum-Medium.woff2") format("woff2");
-}
-@font-face {
-  font-family: "KalamehWebFaNum";
-  font-style: normal;
-  font-weight: 600;
-  font-display: swap;
-  src: url("/fonts/KalamehWebFaNum-SemiBold.woff2") format("woff2");
-}
-@font-face {
-  font-family: "KalamehWebFaNum";
-  font-style: normal;
-  font-weight: 700;
-  font-display: swap;
-  src: url("/fonts/KalamehWebFaNum-Bold.woff2") format("woff2");
-}
-@font-face {
-  font-family: "KalamehWebFaNum";
-  font-style: normal;
-  font-weight: 800;
-  font-display: swap;
-  src: url("/fonts/KalamehWebFaNum-ExtraBold.woff2") format("woff2");
-}
-@font-face {
-  font-family: "KalamehWebFaNum";
-  font-style: normal;
-  font-weight: 900;
-  font-display: swap;
-  src: url("/fonts/KalamehWebFaNum-Black.woff2") format("woff2");
-}
-
 :root {
   color-scheme: light;
 
@@ -129,19 +65,6 @@
   --warning: light-dark(oklch(0.82 0.15 85), #fcd34d);
   --info: light-dark(oklch(0.72 0.16 230), #7dd3fc);
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 .dark {
   color-scheme: dark;
